# seL4-apex-rs

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  settings.cmake
.devcontainer/: Dockerfile  devcontainer.json
projects/camkes-bindgen/: Cargo.toml  build.rs
projects/client-server/: CMakeLists.txt  client-server.camkes
projects/client-server/components/client/: CMakeLists.txt  Cargo.toml  client.camkes
projects/client-server/components/client/src/: run.rs
projects/client-server/components/server/: CMakeLists.txt  Cargo.toml  server.camkes
projects/client-server/components/server/src/: run.rs
projects/client-server/interfaces/: calc.idl4
projects/hello-rust/: CMakeLists.txt  Cargo.toml  build.rs  hello-rust.camkes
projects/hello-rust/src/: run.rs
projects/hello-world/: CMakeLists.txt  hello-world.c  hello-world.camkes  hello.c  hello.camkes
